Add steps to support building native app

--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,16 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
         <quarkus.platform.version>2.8.2.Final</quarkus.platform.version>
+
+        <quarkus.package.type>uber-jar</quarkus.package.type>
+        <quarkus.package.output-name>${project.artifactId}</quarkus.package.output-name>
+        <quarkus.package.runner-suffix>-${project.version}</quarkus.package.runner-suffix>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -27,7 +34,6 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-core -->
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-core</artifactId>
@@ -56,4 +62,12 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>native</id>
+            <properties>
+                <quarkus.package.type>native</quarkus.package.type>
+            </properties>
+        </profile>
+    </profiles>
 </project>
